整理  ， 修改 menu'的请求

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="/src/img/bird.ico" type="image/x-icon" />
-        <link rel="shortcut icon" href="/src/img/bird.ico" type="image/x-icon"/>
+        <link rel="icon" href="http://cfund.oss-cn-hangzhou.aliyuncs.com/e97114963238211a8ec3b657ef37299a.ico" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="//g.alicdn.com/??platform/common/s/1.1/global/global.css,uxcore/uxcore-kuma/2.0.19/orange.min.css">
     </head>
     <body>
